# iso-fr-ai

./: .gitattributes  .gitignore  README.md  app.py  config -gpu.xml  config.py  config.xml  db.json  dbtest.py  docker-compose-gpu-local.yaml  docker-compose-gpu.yaml  docker-compose.yaml  docker_sc.py  iso-fr.py  iso-imagefr.py  isoai.py  isoai.sh  isoaiv3.py  isoaiv6.py  logging_test.py  paidpai.py  program.prof  pyproject.toml  requirements.txt  server.js  solr-entrypoint.sh  speechtotext.py  test-fr.py  wait-for-it.sh
face/: face_detection.py  face_recognition.py  gender_age_detection.py  index.py  main.py
face_recognition/: iso-fr.py  isoaiv1.py  isoaiv2.py  isoaiv4.py  isoaiv5.py  isoaiv7.py
flask/: Dockerfile  app.py  audio_processing.json  camera_urls.csv  compare_faces.py  config.py  db.py  docker-compose.yml  emotion.py  logger.py  mongo_conn.py  requirements.txt  routes.py  socketio_instance.py
googleSP2T/: googleDefault.py  googleDiarization.py  googlespeechtotext.py  rare-shadow-421306-321d6c306286.json  speaker-diarization.py  transcription.txt
insightface/: WhisperFromFile.py  camera_storage.py  camera_urls.csv  client_camera.py  client_camera2.py  emotion-recognition.py  face.py  facetest.py  fertest.py  imagetest.py  ip_cam_backend.py  ip_cam_backend_gpu.py  ipcamtest.py  isoai.py  isoai_async.py  main.py  requirements.txt  scrfd.py  speech.ipynb  speechtotext.py  stateulart.py  stream.py  swapfaces.py  test-fr.py  webrtc.py
iso-auth/: Dockerfile  app.py  configold.py  db.py  logger.py  requirements.txt  routes.py
iso-diarize/: Dockerfile  (+10 more)
(+272 files in other folders)
